@@ -29,34 +29,32 @@ import com.iexec.common.utils.BytesUtils;
 import com.iexec.common.utils.DateTimeUtils;
 import com.iexec.core.chain.SignatureService;
 import com.iexec.core.chain.Web3jService;
-import com.iexec.core.detector.task.ContributionTimeoutTaskDetector;
-import com.iexec.core.sms.SmsService;
 import com.iexec.core.task.Task;
 import com.iexec.core.task.TaskService;
 import com.iexec.core.task.TaskStatus;
 import com.iexec.core.task.update.TaskUpdateRequestManager;
 import com.iexec.core.worker.Worker;
 import com.iexec.core.worker.WorkerService;
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.*;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 import static com.iexec.common.replicate.ReplicateStatus.*;
-import static com.iexec.core.task.TaskStatus.CONSENSUS_REACHED;
 import static com.iexec.core.task.TaskStatus.RUNNING;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 
 
+@Slf4j
 class ReplicateSupplyServiceTests {
 
     private final static String WALLET_WORKER_1 = "0x1a69b2eb604db8eba185df03ea4f5288dcbbd248";
@@ -78,10 +76,9 @@ class ReplicateSupplyServiceTests {
     @Mock private TaskService taskService;
     @Mock private TaskUpdateRequestManager taskUpdateRequestManager;
     @Mock private WorkerService workerService;
-    @Mock private SmsService smsService;
     @Mock private Web3jService web3jService;
-    @Mock private ContributionTimeoutTaskDetector contributionTimeoutTaskDetector;
 
+    @Spy
     @InjectMocks
     private ReplicateSupplyService replicateSupplyService;
 
@@ -106,7 +103,7 @@ class ReplicateSupplyServiceTests {
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
         assertThat(oAuthorization).isEmpty();
-        Mockito.verifyNoInteractions(web3jService, taskService, taskUpdateRequestManager, contributionTimeoutTaskDetector, replicatesService, signatureService, smsService);
+        Mockito.verifyNoInteractions(web3jService, taskService, taskUpdateRequestManager, replicatesService, signatureService);
     }
 
     @Test
@@ -115,87 +112,22 @@ class ReplicateSupplyServiceTests {
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(0, WALLET_WORKER_1);
         assertThat(oAuthorization).isEmpty();
-        Mockito.verifyNoInteractions(web3jService, taskService, taskUpdateRequestManager, contributionTimeoutTaskDetector, replicatesService, signatureService, smsService);
+        Mockito.verifyNoInteractions(web3jService, taskService, taskUpdateRequestManager, replicatesService, signatureService);
     }
 
     @Test
     void shouldNotGetReplicateSinceNoRunningTask() {
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(taskService.getInitializedOrRunningTasks()).thenReturn(new ArrayList<>());
+        when(taskService.getPrioritizedInitializedOrRunningTask(false, Collections.emptyList())).thenReturn(Optional.empty());
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
         assertThat(oAuthorization).isEmpty();
         Mockito.verify(taskService, Mockito.never()).getTaskByChainTaskId(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, taskUpdateRequestManager, replicatesService, signatureService, smsService);
+        Mockito.verifyNoInteractions(taskUpdateRequestManager, replicatesService, signatureService);
     }
 
     @Test
-    void shouldNotGetReplicateWhenTaskIsEmpty() {
-        Worker existingWorker = Worker.builder()
-                .id("1")
-                .walletAddress(WALLET_WORKER_1)
-                .cpuNb(4)
-                .teeEnabled(false)
-                .lastAliveDate(new Date())
-                .build();
-
-        Task runningTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
-        runningTask.setMaxExecutionTime(maxExecutionTime);
-        runningTask.changeStatus(RUNNING);
-        runningTask.setTag(NO_TEE_TAG);
-        runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
-
-        workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
-        when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.empty());
-
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
-        assertThat(oAuthorization).isEmpty();
-        Mockito.verify(taskService).getTaskByChainTaskId(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(signatureService, smsService);
-    }
-
-    @Test
-    void shouldNotGetReplicateWhenTaskNoMoreInitializedOrRunning() {
-        Worker existingWorker = Worker.builder()
-                .id("1")
-                .walletAddress(WALLET_WORKER_1)
-                .cpuNb(4)
-                .teeEnabled(false)
-                .lastAliveDate(new Date())
-                .build();
-
-        Task runningTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
-        runningTask.setMaxExecutionTime(maxExecutionTime);
-        runningTask.changeStatus(RUNNING);
-        runningTask.setTag(NO_TEE_TAG);
-        runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
-
-        Task completedTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
-        completedTask.setMaxExecutionTime(maxExecutionTime);
-        completedTask.changeStatus(CONSENSUS_REACHED);
-        completedTask.setTag(NO_TEE_TAG);
-        completedTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
-
-        workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
-        when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(completedTask));
-
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
-        assertThat(oAuthorization).isEmpty();
-        Mockito.verify(taskService).getTaskByChainTaskId(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(signatureService, smsService);
-    }
-
-    @Test
-    void shouldNotGetReplicateSinceConsensusReachedOnChain() {
+    void shouldNotGetReplicateSinceNoReplicatesList() {
         Worker worker = Worker.builder()
                 .id("1")
                 .walletAddress(WALLET_WORKER_2)
@@ -209,20 +141,60 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(NO_TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
 
         workerCanWorkAndHasGas(WALLET_WORKER_2);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_2)).thenReturn(Optional.of(worker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isConsensusReached(CHAIN_TASK_ID)).thenReturn(true);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.empty());
 
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_2);
         assertThat(oAuthorization).isEmpty();
-        Mockito.verify(taskService).isConsensusReached(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(replicatesService, signatureService, smsService);
-        assertTaskAccessForNewReplicateLockNeverUsed();
+        Mockito.verify(taskService, Mockito.never()).isConsensusReached(any());
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateLockNeverUsed(CHAIN_TASK_ID);
+    }
+
+    @Test
+    void shouldNotGetReplicateSinceConsensusReachedOnChain() {
+        Worker worker = Worker.builder()
+                .id("1")
+                .walletAddress(WALLET_WORKER_2)
+                .cpuNb(4)
+                .teeEnabled(false)
+                .lastAliveDate(new Date())
+                .build();
+        final Replicate replicate = new Replicate(WALLET_WORKER_2, CHAIN_TASK_ID);
+        replicate.updateStatus(CONTRIBUTED, ReplicateStatusModifier.WORKER);
+        List<Replicate> replicates = List.of(replicate);
+        ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, replicates);
+
+        Task runningTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
+        runningTask.setMaxExecutionTime(maxExecutionTime);
+        runningTask.changeStatus(RUNNING);
+        runningTask.setTag(NO_TEE_TAG);
+        runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
+
+        workerCanWorkAndHasGas(WALLET_WORKER_2);
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
+        when(workerService.getWorker(WALLET_WORKER_2)).thenReturn(Optional.of(worker));
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
+        when(taskService.isConsensusReached(replicatesList)).thenReturn(true);
+
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_2)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_2);
+            assertThat(oAuthorization).isEmpty();
+        }
+
+        Mockito.verify(taskService).isConsensusReached(replicatesList);
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateNotDeadLocking(CHAIN_TASK_ID);
     }
 
     @Test
@@ -231,7 +203,7 @@ class ReplicateSupplyServiceTests {
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
         assertThat(oAuthorization).isEmpty();
-        Mockito.verifyNoInteractions(taskService, contributionTimeoutTaskDetector, taskUpdateRequestManager, replicatesService, signatureService, smsService);
+        Mockito.verifyNoInteractions(taskService, taskUpdateRequestManager, replicatesService, signatureService);
     }
 
     @Test
@@ -242,7 +214,7 @@ class ReplicateSupplyServiceTests {
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
         assertThat(oAuthorization).isEmpty();
         Mockito.verify(web3jService).hasEnoughGas(WALLET_WORKER_1);
-        Mockito.verifyNoInteractions(taskService, contributionTimeoutTaskDetector, taskUpdateRequestManager, replicatesService, signatureService, smsService);
+        Mockito.verifyNoInteractions(taskService, taskUpdateRequestManager, replicatesService, signatureService);
     }
 
     @Test
@@ -259,22 +231,29 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(NO_TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
+
+        final ReplicatesList replicatesList = new ReplicatesList(
+                CHAIN_TASK_ID,
+                Collections.singletonList(new Replicate(WALLET_WORKER_1, CHAIN_TASK_ID))
+        );
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1)).thenReturn(true);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(true);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
 
-        assertThat(oAuthorization).isEmpty();
-        assertTaskAccessForNewReplicateNotDeadLocking();
-        Mockito.verify(replicatesService).hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, signatureService, smsService);
+            assertThat(oAuthorization).isEmpty();
+        }
+
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateLockNeverUsed(CHAIN_TASK_ID);
     }
 
     @Test
@@ -292,6 +271,7 @@ class ReplicateSupplyServiceTests {
         runningTask.setMaxExecutionTime(maxExecutionTime);
         runningTask.setTag(NO_TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
 
         // Replicate already scheduled and contributed on worker1
         Replicate replicate = new Replicate(WALLET_WORKER_1, CHAIN_TASK_ID);
@@ -299,23 +279,23 @@ class ReplicateSupplyServiceTests {
         replicate.setWorkerWeight(trust);
         replicate.setContributionHash("test");
 
-        when(replicatesService.getReplicates(CHAIN_TASK_ID))
-                .thenReturn(List.of(replicate));
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, List.of(replicate));
 
         // Try to see if a replicate of the task can be scheduled on worker2
         workerCanWorkAndHasGas(WALLET_WORKER_2);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_2)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_2)).thenReturn(false);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_2);
+            assertThat(oAuthorization).isEmpty();
+        }
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_2);
-        assertThat(oAuthorization).isEmpty();
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, signatureService, smsService);
-        assertTaskAccessForNewReplicateNotDeadLocking();
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateNotDeadLocking(CHAIN_TASK_ID);
     }
 
     @Test
@@ -333,25 +313,27 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge("");
+
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, Collections.emptyList());
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(false, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1)).thenReturn(false);
-        when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, true)).thenReturn("");
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+            assertThat(oAuthorization).isEmpty();
+        }
 
-        assertThat(oAuthorization).isEmpty();
         Mockito.verify(replicatesService, Mockito.never()).addNewReplicate(CHAIN_TASK_ID, WALLET_WORKER_1);
         Mockito.verify(workerService, Mockito.never()).addChainTaskIdToWorker(CHAIN_TASK_ID, WALLET_WORKER_1);
-        Mockito.verify(smsService).getEnclaveChallenge(CHAIN_TASK_ID, true);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, signatureService);
-        assertTaskAccessForNewReplicateNotDeadLocking();
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateLockNeverUsed(CHAIN_TASK_ID);
     }
 
     @Test
@@ -370,31 +352,31 @@ class ReplicateSupplyServiceTests {
         task1.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
         task1.changeStatus(RUNNING);
         task1.setTag(NO_TEE_TAG);
+        task1.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
 
         Task taskDeadlineReached = new Task(DAPP_NAME, COMMAND_LINE, trust, CHAIN_TASK_ID_2);
         taskDeadlineReached.setMaxExecutionTime(maxExecutionTime);
         taskDeadlineReached.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), -60));
         taskDeadlineReached.changeStatus(RUNNING);
         taskDeadlineReached.setTag(NO_TEE_TAG);
+        taskDeadlineReached.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
 
         Replicate replicate = new Replicate(WALLET_WORKER_1, CHAIN_TASK_ID);
         replicate.updateStatus(CONTRIBUTED, ReplicateStatusModifier.WORKER);
         replicate.setWorkerWeight(trust);
         replicate.setContributionHash("test");
 
+        ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, List.of(replicate));
+
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks()).thenReturn(List.of(task1, taskDeadlineReached));
-        doNothing().when(contributionTimeoutTaskDetector).detect();
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(task1));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, List.of(CHAIN_TASK_ID)))
+                .thenReturn(Optional.of(taskDeadlineReached));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(task1));
-        when(replicatesService.getReplicates(CHAIN_TASK_ID)).thenReturn(List.of(replicate));
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
 
         replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
-
-        // the call should only happen once over the two tasks
-        Mockito.verify(contributionTimeoutTaskDetector).detect();
-        Mockito.verify(taskService).isConsensusReached(CHAIN_TASK_ID);
-        Mockito.verify(taskService, Mockito.never()).isConsensusReached(CHAIN_TASK_ID_2);
     }
 
     @Test
@@ -412,21 +394,21 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(NO_TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(true);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(new ReplicatesList(CHAIN_TASK_ID, Collections.emptyList())));
+        final Lock lock = replicateSupplyService.taskAccessForNewReplicateLocks.computeIfAbsent(CHAIN_TASK_ID, k -> new ReentrantLock());
+        CompletableFuture.runAsync(lock::lock).join();
 
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
 
         assertThat(oAuthorization).isEmpty();
-        Mockito.verify(taskService).isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, replicatesService, signatureService, smsService);
-        assertTaskAccessForNewReplicateLockNeverUsed();
+        Mockito.verifyNoInteractions(signatureService);
     }
 
     @Test
@@ -444,27 +426,29 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(NO_TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(BytesUtils.EMPTY_ADDRESS);
+
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, Collections.emptyList());
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1)).thenReturn(false);
-        when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, false)).thenReturn(BytesUtils.EMPTY_ADDRESS);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
         when(signatureService.createAuthorization(WALLET_WORKER_1, CHAIN_TASK_ID, BytesUtils.EMPTY_ADDRESS))
                 .thenReturn(new WorkerpoolAuthorization());
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+            assertThat(oAuthorization).isPresent();
+        }
 
-        assertThat(oAuthorization).isPresent();
         Mockito.verify(replicatesService).addNewReplicate(CHAIN_TASK_ID, WALLET_WORKER_1);
         Mockito.verify(workerService).addChainTaskIdToWorker(CHAIN_TASK_ID, WALLET_WORKER_1);
         Mockito.verify(signatureService).createAuthorization(WALLET_WORKER_1, CHAIN_TASK_ID, BytesUtils.EMPTY_ADDRESS);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector);
-        assertTaskAccessForNewReplicateNotDeadLocking();
+        assertTaskAccessForNewReplicateNotDeadLocking(CHAIN_TASK_ID);
     }
 
     @Test
@@ -482,26 +466,29 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(ENCLAVE_CHALLENGE);
+
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, Collections.emptyList());
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(false, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1)).thenReturn(false);
-        when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, true)).thenReturn(ENCLAVE_CHALLENGE);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
         when(signatureService.createAuthorization(WALLET_WORKER_1, CHAIN_TASK_ID, ENCLAVE_CHALLENGE))
                 .thenReturn(new WorkerpoolAuthorization());
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
 
-        assertThat(oAuthorization).isPresent();
+            assertThat(oAuthorization).isPresent();
+        }
+
         Mockito.verify(replicatesService).addNewReplicate(CHAIN_TASK_ID, WALLET_WORKER_1);
         Mockito.verify(workerService).addChainTaskIdToWorker(CHAIN_TASK_ID, WALLET_WORKER_1);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector);
-        assertTaskAccessForNewReplicateNotDeadLocking();
+        assertTaskAccessForNewReplicateNotDeadLocking(CHAIN_TASK_ID);
     }
 
     @Test
@@ -521,18 +508,16 @@ class ReplicateSupplyServiceTests {
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(true, Collections.emptyList()))
+                .thenReturn(Optional.empty());
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
 
         Optional<WorkerpoolAuthorization> oAuthorization =
                 replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
 
         assertThat(oAuthorization).isEmpty();
-        Mockito.verify(taskService, Mockito.never()).isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector, replicatesService, signatureService, smsService);
-        assertTaskAccessForNewReplicateLockNeverUsed();
+        Mockito.verifyNoInteractions(signatureService);
+        assertTaskAccessForNewReplicateLockNeverUsed(CHAIN_TASK_ID);
     }
 
     @Test
@@ -550,36 +535,54 @@ class ReplicateSupplyServiceTests {
         runningTask.changeStatus(RUNNING);
         runningTask.setTag(TEE_TAG);
         runningTask.setContributionDeadline(DateTimeUtils.addMinutesToDate(new Date(), 60));
+        runningTask.setEnclaveChallenge(ENCLAVE_CHALLENGE);
+
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, Collections.emptyList());
 
         workerCanWorkAndHasGas(WALLET_WORKER_1);
-        when(taskService.getInitializedOrRunningTasks())
-                .thenReturn(Collections.singletonList(runningTask));
+        when(taskService.getPrioritizedInitializedOrRunningTask(false, Collections.emptyList()))
+                .thenReturn(Optional.of(runningTask));
         when(workerService.getWorker(WALLET_WORKER_1)).thenReturn(Optional.of(existingWorker));
-        when(taskService.getTaskByChainTaskId(CHAIN_TASK_ID)).thenReturn(Optional.of(runningTask));
-        when(taskService.isTaskBeingAccessedForNewReplicate(CHAIN_TASK_ID)).thenReturn(false);
-        when(replicatesService.hasWorkerAlreadyParticipated(CHAIN_TASK_ID, WALLET_WORKER_1)).thenReturn(false);
-        when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, true)).thenReturn(ENCLAVE_CHALLENGE);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
         when(signatureService.createAuthorization(WALLET_WORKER_1, CHAIN_TASK_ID, ENCLAVE_CHALLENGE))
                 .thenReturn(new WorkerpoolAuthorization());
 
-        Optional<WorkerpoolAuthorization> oAuthorization =
-                replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
+        try (MockedStatic<ReplicatesHelper> replicatesHelper = Mockito.mockStatic(ReplicatesHelper.class)) {
+            replicatesHelper.when(() -> ReplicatesHelper.hasWorkerAlreadyParticipated(replicatesList, WALLET_WORKER_1)).thenReturn(false);
+            Optional<WorkerpoolAuthorization> oAuthorization =
+                    replicateSupplyService.getAuthOfAvailableReplicate(workerLastBlock, WALLET_WORKER_1);
 
-        assertThat(oAuthorization).isPresent();
+            assertThat(oAuthorization).isPresent();
+        }
+
         Mockito.verify(replicatesService).addNewReplicate(CHAIN_TASK_ID, WALLET_WORKER_1);
         Mockito.verify(workerService).addChainTaskIdToWorker(CHAIN_TASK_ID, WALLET_WORKER_1);
-        Mockito.verifyNoInteractions(contributionTimeoutTaskDetector);
-        assertTaskAccessForNewReplicateNotDeadLocking();
+        assertTaskAccessForNewReplicateNotDeadLocking(CHAIN_TASK_ID);
     }
 
-    private void assertTaskAccessForNewReplicateNotDeadLocking() {
-        Mockito.verify(taskService).lockTaskAccessForNewReplicate(CHAIN_TASK_ID);
-        Mockito.verify(taskService).unlockTaskAccessForNewReplicate(CHAIN_TASK_ID);
+    /**
+     * Checks the lock has been released and can be reused.
+     *
+     * @param chainTaskId ID of the task whose lock should be checked.
+     */
+    private void assertTaskAccessForNewReplicateNotDeadLocking(String chainTaskId) {
+        final Lock lock = replicateSupplyService.taskAccessForNewReplicateLocks.get(chainTaskId);
+        final Boolean successfulLock = CompletableFuture.supplyAsync(() -> {
+                    final boolean locked = lock.tryLock();
+                    if (!locked) {
+                        return false;
+                    }
+                    lock.unlock();
+                    return true;
+                })
+                .completeOnTimeout(false, 1, TimeUnit.SECONDS)
+                .join();
+        assertThat(successfulLock).isTrue();
     }
 
-    private void assertTaskAccessForNewReplicateLockNeverUsed() {
-        Mockito.verify(taskService, Mockito.never()).lockTaskAccessForNewReplicate(CHAIN_TASK_ID);
-        Mockito.verify(taskService, Mockito.never()).unlockTaskAccessForNewReplicate(CHAIN_TASK_ID);
+    private void assertTaskAccessForNewReplicateLockNeverUsed(String chainTaskId) {
+        final Lock lock = replicateSupplyService.taskAccessForNewReplicateLocks.get(chainTaskId);
+        assertThat(lock).isNull();;
     }
 
     // Tests on getMissedTaskNotifications()
@@ -603,13 +606,13 @@ class ReplicateSupplyServiceTests {
 
         List<String> ids = List.of(CHAIN_TASK_ID);
         Task teeTask = new Task(DAPP_NAME, COMMAND_LINE, 5, CHAIN_TASK_ID);
+        teeTask.setEnclaveChallenge(ENCLAVE_CHALLENGE);
         Optional<Replicate> noTeeReplicate = getStubReplicate(ReplicateStatus.COMPUTING);
         teeTask.setTag(TEE_TAG);
 
         when(workerService.getChainTaskIds(WALLET_WORKER_1)).thenReturn(ids);
         when(taskService.getTasksByChainTaskIds(ids)).thenReturn(List.of(teeTask));
         when(replicatesService.getReplicate(any(), any())).thenReturn(noTeeReplicate);
-        when(smsService.getEnclaveChallenge(CHAIN_TASK_ID, true)).thenReturn("");
 
         List<TaskNotification> taskNotifications =
                 replicateSupplyService.getMissedTaskNotifications(3L, WALLET_WORKER_1);
@@ -682,6 +685,8 @@ class ReplicateSupplyServiceTests {
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.CONTRIBUTING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.CONTRIBUTED);
+        final List<Replicate> replicates = List.of(replicate1.get(), replicate2.get());
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, replicates);
 
         when(workerService.getChainTaskIds(WALLET_WORKER_1)).thenReturn(ids);
         when(taskService.getTasksByChainTaskIds(ids)).thenReturn(taskList);
@@ -692,7 +697,8 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
         when(replicatesService.didReplicateContributeOnchain(CHAIN_TASK_ID, WALLET_WORKER_1))
                 .thenReturn(true);
-        when(taskService.isConsensusReached(taskList.get(0).getChainTaskId())).thenReturn(false);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
+        when(taskService.isConsensusReached(replicatesList)).thenReturn(false);
 
         List<TaskNotification> missedTaskNotifications =
                 replicateSupplyService.getMissedTaskNotifications(blockNumber, WALLET_WORKER_1);
@@ -718,6 +724,8 @@ class ReplicateSupplyServiceTests {
         List<Task> taskList = getStubTaskList(TaskStatus.RUNNING);
         Optional<Replicate> replicate1 = getStubReplicate(ReplicateStatus.CONTRIBUTING);
         Optional<Replicate> replicate2 = getStubReplicate(ReplicateStatus.CONTRIBUTED);
+        List<Replicate> replicates = List.of(replicate1.get(), replicate2.get());
+        final ReplicatesList replicatesList = new ReplicatesList(CHAIN_TASK_ID, replicates);
 
         when(workerService.getChainTaskIds(WALLET_WORKER_1)).thenReturn(ids);
         when(taskService.getTasksByChainTaskIds(ids)).thenReturn(taskList);
@@ -728,7 +736,8 @@ class ReplicateSupplyServiceTests {
                 .thenReturn(getStubAuth());
         when(replicatesService.didReplicateContributeOnchain(CHAIN_TASK_ID, WALLET_WORKER_1))
                 .thenReturn(true);
-        when(taskService.isConsensusReached(taskList.get(0).getChainTaskId())).thenReturn(true);
+        when(replicatesService.getReplicatesList(CHAIN_TASK_ID)).thenReturn(Optional.of(replicatesList));
+        when(taskService.isConsensusReached(replicatesList)).thenReturn(true);
 
         List<TaskNotification> missedTaskNotifications =
                 replicateSupplyService.getMissedTaskNotifications(blockNumber, WALLET_WORKER_1);
